# rust-erp

./: .gitignore  CLAUDE.md  Cargo.toml
docs/: tech-spec.md
examples/: config.toml
src/: main.rs
src/config/: mod.rs  models.rs
src/daemon/: ini_patcher.rs  logging.rs  middleware.rs  mod.rs  restart.rs  security.rs  server.rs  upload.rs
src/push/: client.rs  mod.rs
